tests/snapshots/snapshots__pipeline@redundant.pr.snap
---
source: tests/snapshots.rs
expression: "tiny_prism::report(&src)"
input_file: tests/cases/redundant.pr
---
== tokens ==
VOpen Type UIdent("Color") Eq UIdent("Red") Bar UIdent("Green") Bar UIdent("Blue") VSemi Fn Ident("name") LParen Ident("c") RParen Eq VOpen Match Ident("c") Of VOpen UIdent("Red") FatArrow Int(IntLit { value: 1, suffix: None }) VSemi Ident("_") FatArrow Int(IntLit { value: 0, suffix: None }) VSemi UIdent("Blue") FatArrow Int(IntLit { value: 3, suffix: None }) VClose VClose VSemi Fn Ident("main") LParen RParen Eq Ident("println") LParen Ident("name") LParen UIdent("Blue") RParen RParen VClose

== ast ==
Program {
    types: [
        DataDecl {
            name: "Color",
            params: [],
            ctors: [
                Ctor {
                    name: "Red",
                    args: [],
                    fields: None,
                },
                Ctor {
                    name: "Green",
                    args: [],
                    fields: None,
                },
                Ctor {
                    name: "Blue",
                    args: [],
                    fields: None,
                },
            ],
            deriving: [],
            newtype: false,
            span: 0..31,
        },
    ],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "name",
            params: [
                Param {
                    name: "c",
                    ty: None,
                    borrow: false,
                    default: None,
                },
            ],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Match(
                    Spanned {
                        node: Var(
                            "c",
                        ),
                        span: 53..54,
                    },
                    [
                        Arm {
                            pat: Spanned {
                                node: Ctor(
                                    "Red",
                                    [],
                                ),
                                span: 62..65,
                            },
                            body: Spanned {
                                node: Int(
                                    IntLit {
                                        value: 1,
                                        suffix: None,
                                    },
                                ),
                                span: 69..70,
                            },
                        },
                        Arm {
                            pat: Spanned {
                                node: Wild,
                                span: 75..76,
                            },
                            body: Spanned {
                                node: Int(
                                    IntLit {
                                        value: 0,
                                        suffix: None,
                                    },
                                ),
                                span: 80..81,
                            },
                        },
                        Arm {
                            pat: Spanned {
                                node: Ctor(
                                    "Blue",
                                    [],
                                ),
                                span: 86..90,
                            },
                            body: Spanned {
                                node: Int(
                                    IntLit {
                                        value: 3,
                                        suffix: None,
                                    },
                                ),
                                span: 94..95,
                            },
                        },
                    ],
                ),
                span: 47..95,
            },
            wheres: [],
            span: 32..95,
        },
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "println",
                        ),
                        span: 108..115,
                    },
                    [
                        Spanned {
                            node: Call(
                                Spanned {
                                    node: Var(
                                        "name",
                                    ),
                                    span: 116..120,
                                },
                                [
                                    Spanned {
                                        node: Var(
                                            "Blue",
                                        ),
                                        span: 121..125,
                                    },
                                ],
                            ),
                            span: 116..126,
                        },
                    ],
                ),
                span: 108..127,
            },
            wheres: [],
            span: 96..127,
        },
    ],
}

== types ==
Type Error: in `name`: unreachable match arm
   ╭─[ <source>:6:5 ]
   │
 6 │     Blue => 3
   │     ──┬─  
   │       ╰─── in `name`: unreachable match arm
───╯
